--- a/deans/public/mix-manifest.json
+++ b/deans/public/mix-manifest.json
@@ -79,6 +79,9 @@
     "/plugins/fontawesome-free/css/v4-shims.css": "/plugins/fontawesome-free/css/v4-shims.css",
     "/plugins/fontawesome-free/css/v4-shims.min.css": "/plugins/fontawesome-free/css/v4-shims.min.css",
     "/plugins/icheck-bootstrap/icheck-bootstrap.min.css": "/plugins/icheck-bootstrap/icheck-bootstrap.min.css",
+    "/img/def_user.png": "/img/def_user.png",
+    "/img/logo_icon.png": "/img/logo_icon.png",
+    "/img/logo.png": "/img/logo.png",
     "/css/adminlte.css": "/css/adminlte.css",
     "/css/adminlte.css.map": "/css/adminlte.css.map",
     "/css/adminlte.min.css": "/css/adminlte.min.css",
