--- a/deans/.env
+++ b/deans/.env
@@ -2,21 +2,21 @@ APP_NAME=Deans
 APP_ENV=local
 APP_KEY=base64:5N8+ccuIcltWq88wZDqruWSKnbq5ScH0FrmDhICU5jk=
 APP_DEBUG=true
-APP_URL=http://0.0.0.0
-#APP_URL=http://deans.com
+#APP_URL=http://0.0.0.0
+APP_URL=http://deans.com
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=demo
-DB_USERNAME=demo
-DB_PASSWORD=12345678
+#DB_DATABASE=demo
+#DB_USERNAME=demo
+#DB_PASSWORD=12345678
 
-#DB_DATABASE=deans
-#DB_USERNAME=postgres
-#DB_PASSWORD=postgres
+DB_DATABASE=deans
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
